[project]
name = "mm-std"
version = "0.1.6"
description = ""
requires-python = ">=3.12"
dependencies = [
    "httpx[socks,http2]~=0.27.2",
    "pydash~=8.0.0",
    "python-dotenv~=1.0.1",
    "pydantic~=2.9.2",
    "PyYAML~=6.0.1",
    "cryptography~=43.0.3",
    "rich~=13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest~=8.3.3",
    "pytest-xdist~=3.6.1",
    "pytest-httpserver~=1.1.0",
    "coverage~=7.6.4",
    "ruff~=0.7.0",
    "pip-audit~=2.7.3",
    "bandit~=1.7.10",
    "mypy~=1.13.0",
    "types-PyYAML~=6.0.12.20240917",
]

[tool.mypy]
python_version = "3.12"
warn_no_return = false
strict = true
exclude = ["^tests/", "^tmp/"]

[tool.ruff]
line-length = 130
target-version = "py312"
lint.select = [
    "F", # Pyflakes
    "E", "W", # pycodestyle
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "COM", # flake8-commas
    "C40", # flake8-comprehensions
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "T20", # flake8-print
    "RUF", # Ruff-specific rules
]
lint.ignore = [
    "A003", # builtin-attribute-shadowing
    "UP040", # non-pep695-type-alias
    "COM812"
]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B311"]

[tool.pytest.ini_options]
markers = ["proxy: requires access proxies", "telegram: requires a telegram bot"]
