[project]
name = "mm-std"
version = "0.1.9"
description = ""
requires-python = ">=3.12"
dependencies = [
    "httpx[socks,http2]~=0.28.1",
    "pydash~=8.0.4",
    "python-dotenv~=1.0.1",
    "pydantic~=2.10.4",
    "PyYAML~=6.0.2",
    "cryptography~=44.0.0",
    "rich~=13.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest~=8.3.4",
    "pytest-xdist~=3.6.1",
    "pytest-httpserver~=1.1.0",
    "ruff~=0.8.6",
    "pip-audit~=2.7.3",
    "bandit~=1.8.0",
    "mypy~=1.14.1",
    "types-PyYAML~=6.0.12.20241230",
]

[tool.mypy]
python_version = "3.13"
warn_no_return = false
strict = true
exclude = ["^tests/", "^tmp/"]

[tool.ruff]
line-length = 130
target-version = "py313"
[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "E",
    "W",   # pycodestyle
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "COM", # flake8-commas
    "C40", # flake8-comprehensions
    "G",   # flake8-logging-format
    "PIE", # flake8-pie
    "T20", # flake8-print
    "RUF", # Ruff-specific rules
]
ignore = [
    "A003",   # builtin-attribute-shadowing
    "COM812",
]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B311"]

[tool.pytest.ini_options]
markers = [
    "proxy: requires access proxies",
]
