[project]
name = "mm-std"
version = "0.1.9"
description = ""
requires-python = ">=3.12"
dependencies = [
    "httpx[socks,http2]~=0.28.1",
    "pydash~=8.0.5",
    "python-dotenv~=1.0.1",
    "pydantic~=2.10.5",
    "PyYAML~=6.0.2",
    "cryptography~=44.0.0",
    "rich~=13.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest~=8.3.4",
    "pytest-xdist~=3.6.1",
    "pytest-httpserver~=1.1.0",
    "ruff~=0.9.2",
    "pip-audit~=2.7.3",
    "bandit~=1.8.2",
    "mypy~=1.14.1",
    "types-PyYAML~=6.0.12.20241230",
]

[tool.mypy]
python_version = "3.13"
warn_no_return = false
strict = true
exclude = ["^tests/", "^tmp/"]

[tool.ruff]
line-length = 130
target-version = "py313"
[tool.ruff.lint]
select = ["ALL"]
#select = [
#    "F", # Pyflakes
#    "E", # pycodestyle / errors
#    "W", # pycodestyle / warnings
#    "I", # isort
#    "ANN", # flake8-annotations
#    "ASYNC", # flake8-async
#    "S", # flake8-bandit
#    "B", # flake8-bugbear
#    "A", # flake8-builtins
#    "COM", # flake8-commas
#    "FA", # flake8-future-annotations
#    "ISC", # flake8-implicit-str-concat
#    "ICN", # flake8-import-conventions
#    "LOG", # flake8-logging
#    #    "C40", # flake8-comprehensions
#    "G", # flake8-logging-format
#    "INP", # flake8-no-pep420
#    "PIE", # flake8-pie
#    "T20", # flake8-print
#    "PYI", # flake8-pyi
#    "Q", # flake8-quotes
#    "RSE", # flake8-raise
#    "RET", # flake8-return
#    "SLF", #flake8-self
#    "SLOT", #flake8-slots
#    "RUF", # Ruff-specific rules
#]
#ignore = [
#    "A003", # builtin-attribute-shadowing
#    "COM812", # it's used in ruff formatter
#    "S311" # flake8-bandit: suspicious-non-cryptographic-random-usage
#]

ignore = [
    "PT", # flake8-pytest-style
    "D", # pydocstyle
    "PLR0911", # refactor: too-many-return-statements
    "PLR0913", # pylint: too-many-arguments
    "PLR2004", # pylint: magic-value-comparison
    "PLC0414", # pylint: useless-import-alias
    "FBT", # flake8-boolean-trap
    "EM", # flake8-errmsg
    "TRY003", # tryceratops: raise-vanilla-args
    "C901", # mccabe: complex-structure,
    "BLE001", # flake8-blind-except
    "S311", # bandit: suspicious-non-cryptographic-random-usage
    "COM812", # it's used in ruff formatter
]
# Exclude `tests` directory from `ANN` rules
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["ANN", "S"]



[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B311"]

[tool.pytest.ini_options]
markers = ["proxy: requires access proxies"]
